# Puerto

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  PLAN.md  README.md
.claude/rules/: architecture.md  harbor-toml.md  puerto-toml.md  release.md  testing-conventions.md  testing.md  value_objects.md  workflow.md
.config/: nextest.toml
.github/workflows/: ci.yml  release.yml
assets/brand/: BRAND.md
crates/cli/: Cargo.toml  README.md
crates/cli/src/: harbor_toml.rs  main.rs  puerto_toml.rs  scaffold.rs  snippets.rs  tests.rs
crates/cli/src/commands/: list.rs  mod.rs  new.rs  validate.rs
crates/cli/src/generators/: application.rs  bootstrap.rs  domain.rs  infrastructure.rs  migration.rs  mod.rs  naming.rs  presentation.rs  project.rs  scaffold.rs  types.rs  use_case.rs
crates/cli/src/patchers/: api_rs.rs  lib_rs.rs  mod.rs
crates/cli/template/: Cargo.toml.liquid  Makefile  cargo-generate.toml  puerto.toml
crates/cli/template/.config/: nextest.toml
crates/cli/template/business/: AGENTS.md  Cargo.toml.liquid
crates/cli/template/business/src/: lib.rs
crates/cli/template/business/src/application/greeting/: get_greeting.rs
crates/cli/template/business/src/domain/: logger.rs
crates/cli/template/business/src/domain/greeting/: errors.rs  model.rs
crates/cli/template/infrastructure/: AGENTS.md  Cargo.toml.liquid
crates/cli/template/infrastructure/src/: lib.rs  logger.rs
crates/cli/template/infrastructure/src/greeting/: repository.rs
crates/cli/template/presentation/: AGENTS.md  Cargo.toml.liquid
crates/cli/template/presentation/src/: main.rs.liquid
crates/cli/template/presentation/src/api/greeting/: error_mapper.rs  responses.rs  routes.rs
crates/template/basic/: Makefile  cargo-generate.toml  harbor.toml
crates/template/basic/presentation/: AGENTS.md  Cargo.toml
crates/template/basic/presentation/src/: main.rs.liquid
crates/template/basic/presentation/src/api/: greeting.rs
crates/template/basic/presentation/src/api/greeting/: dto.rs
landing/: CLAUDE.md  astro.config.mjs  design-system.html  package.json  playwright.config.ts  pnpm-lock.yaml  project-brief.md
landing/.stitch/: DESIGN.md  metadata.json
landing/.stitch/designs/: index.html
landing/src/components/: Footer.astro  Header.astro
(+14 files in other folders)
