[package]
name = "puerto"
version = "0.7.0"
edition = "2024"
rust-version = "1.85"
description = "Puerto — Rust full-stack DDD framework CLI. Scaffolds Clean Architecture projects with auto-wired DI, SQLx support, and zero manual wiring. Formerly harbor-framework."
license = "MIT"
repository = "https://github.com/Guuri11/Puerto"
homepage = "https://github.com/Guuri11/Puerto"
keywords = ["ddd", "scaffold", "framework", "clean-architecture", "code-generator"]
categories = ["command-line-utilities", "development-tools"]
include = [
    "src/**",
    "template",
    "Cargo.toml",
    "README.md",
]

[[bin]]
name = "puerto"
path = "src/main.rs"

[dependencies]
cargo-generate = "0.23"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
dialoguer = "0.11"
include_dir = "0.7"
serde = { version = "1", features = ["derive"] }
tempfile = "3"
toml = "0.8"

[dev-dependencies]
serde_json = "1"
