[package]
name = "presentation"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "{{project-name}}"
path = "src/main.rs"

[dependencies]
business = { path = "../business" }
infrastructure = { path = "../infrastructure" }
poem = "3"
poem-openapi = { version = "5", features = ["swagger-ui"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
